--- a/feedback-app/src/App.css
+++ b/feedback-app/src/App.css
@@ -61,3 +61,44 @@ button.close {
 .item-header span {
   flex: 1 1 auto;
 }
+
+.select-rating li {
+  display: unset;
+}
+
+.inputGroup input {
+  width: calc(100% - 70px);
+  height: 30px;
+  border: 2px solid lightgray;
+  margin-right: 10px;
+  border-radius: 6px;
+}
+
+.btn {
+  border-radius: 6px;
+  height: 30px;
+  border-color: lightgray;
+}
+[type="radio"] {
+  opacity: 0;
+  margin-bottom: 10px;
+  margin-right: 10px;
+}
+
+[type="radio"] ~ label {
+  margin-right: 10px;
+  padding: 6px;
+  border-radius: 6px;
+  align-items: center;
+  font-size: 16px;
+}
+
+[type="radio"]:checked ~ label {
+  background: #ff6a95;
+  color: #fff;
+  padding: 6px;
+  margin-right: 10px;
+  border-radius: 6px;
+  align-items: center;
+  font-size: 16px;
+}
